--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quiz",
+  "name": "sncquiz",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -35,5 +35,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "sncquiz"
 }
